fixed a buncha broken ones

--- a/yahoocord/people.css
+++ b/yahoocord/people.css
@@ -1,3 +1,18 @@
+/* grin */
+.diversityEmojiItemImage_a45a2a[src='/assets/7fff0841b901c035.svg'], .diversityEmojiItemImage_a45a2a[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.image__1859b[src='/assets/7fff0841b901c035.svg'], .image__1859b[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.emoji__045fa[src='/assets/7fff0841b901c035.svg'], .emoji__045fa[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.emojiImage__13533[src='/assets/7fff0841b901c035.svg'], .emojiImage__13533[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.icon_c1e9c4[src='/assets/7fff0841b901c035.svg'], .icon_c1e9c4[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.icon_f563df[src='/assets/7fff0841b901c035.svg'], .icon_f563df[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.emoji_cc2dff[src='/assets/7fff0841b901c035.svg'], .emoji_cc2dff[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.emoji__01c8c[src='/assets/7fff0841b901c035.svg'], .emoji__01c8c[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.roleIcon__1e6f1[src='/assets/7fff0841b901c035.svg'], .roleIcon__1e6f1[style*='background-image: url("/assets/7fff0841b901c035.svg")'], 
+.emoji[src='/assets/7fff0841b901c035.svg'], .emoji[style*='background-image: url("/assets/7fff0841b901c035.svg")'] {
+	background: transparent !important;
+	content: url("https://dirid.am/yahoocord/4.gif") !important;
+}
+
 /* grinning */
 .diversityEmojiItemImage_a45a2a[src='/assets/f753793200a49ad6.svg'], .diversityEmojiItemImage_a45a2a[style*='background-image: url("/assets/f753793200a49ad6.svg")'], 
 .image__1859b[src='/assets/f753793200a49ad6.svg'], .image__1859b[style*='background-image: url("/assets/f753793200a49ad6.svg")'], 
